# plutus

./: cabal.project  default.nix  hie-cabal.yaml  hie-stack.yaml  shell.nix  stack.yaml
marlowe-playground-client/: README.md  default.nix  package.json
nix/: sources.json
nix/lib/: purescript.nix
nix/pkgs/: default.nix
nix/pkgs/haskell/: default.nix  haskell.nix
nix/stack.materialized/: default.nix  plutus-core.nix  plutus-errors.nix  plutus-ledger-api.nix  plutus-tx-plugin.nix
plutus-common/: plutus-common.cabal
plutus-common/src/: PlutusError.hs
plutus-common/src/Language/Plutus/: Common.hs
plutus-core/: plutus-core.cabal
plutus-core/common/: ErrorCode.hs
plutus-core/plutus-ir-test/: TestLib.hs
plutus-core/plutus-ir-test/errors/: mutuallyRecursiveTypes.golden  recursiveTypeBind.golden
plutus-core/plutus-ir-test/type-errors/: nonSelfRecursive.golden  wrongDataConstrReturnType.golden
plutus-core/plutus-ir/Language/PlutusIR/: Error.hs  Parser.hs
plutus-core/src/Language/PlutusCore/: Error.hs
plutus-core/src/Language/PlutusCore/DeBruijn/: Internal.hs
plutus-core/src/Language/PlutusCore/Evaluation/Machine/: Cek.hs  Exception.hs
plutus-core/test/type-errors/: errorKind.plc.golden
plutus-core/untyped-plutus-core/Language/UntypedPlutusCore/Evaluation/Machine/: Cek.hs
plutus-errors/: README.md  allErrors.txt  error_dump.md  plutus-errors.cabal
plutus-errors/app/: Main.hs
plutus-errors/exe-bootstrap/: Main.hs
plutus-errors/exe-bootstrap/TH/: Bootstrap.hs
plutus-errors/exe-next/: Main.hs
plutus-errors/scripts/: Bootstrapper.hs  Bootstrapper.stdout
plutus-errors/src/: AllErrors.hs  Codes.hs  Docs.hs  Errors.hs  TH.hs
plutus-errors/src/Errors/: Docs.hs
plutus-errors/src/Errors/TH/: GenDocs.hs
plutus-errors/src/TH/: Bootstrap.hs  Codes.hs  Docs.hs  GenCodes.hs  GenDocs.hs
plutus-errors/test/: Spec.hs
plutus-ledger-api/: plutus-ledger-api.cabal
plutus-ledger-api/src/Plutus/V1/Ledger/: Api.hs  Slot.hs
plutus-playground-client/: README.md  default.nix
plutus-scb-client/: default.nix  package.json
plutus-scb/src/Cardano/Metadata/: Server.hs  Types.hs
plutus-scb/src/Plutus/SCB/: Arbitrary.hs
plutus-tx/: plutus-tx.cabal
plutus-tx-plugin/: plutus-tx-plugin.cabal
plutus-tx-plugin/src/Language/PlutusTx/: Plugin.hs
plutus-tx-plugin/src/Language/PlutusTx/Compiler/: Error.hs
plutus-tx/src/Language/PlutusTx/: Code.hs
plutus-tx/src/Language/PlutusTx/Lift/: Class.hs
