cabal-version: 1.12

name:           plutus-errors
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/example#readme>
homepage:       https://github.com/githubuser/example#readme
bug-reports:    https://github.com/githubuser/example/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/example

library
  exposed-modules:
      AllErrors,
      TH.Bootstrap
  other-modules:
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      template-haskell >= 2.16,
      containers >= 0.6,
      plutus-common -any,
      plutus-core -any,
      plutus-tx -any,
      plutus-tx-plugin -any

  default-language: Haskell2010

test-suite plutus-errors-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , plutus-errors
  default-language: Haskell2010
