cabal-version: 2.2
name: plutus-errors
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: nikolaos.bezirgiannis@iohk.io
author: Nikolaos Bezirgiannis
tested-with: ghc ==8.10.2
synopsis: The error codes of the Plutus compiler & runtime
description:
    Contains the documentation and helper code of all the errors and their error-codes
    which can be thrown by the Plutus framework: compiler, interpreter, and client code
category: Language
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll FlexibleContexts ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable DerivingStrategies DerivingVia
    other-extensions: DeriveAnyClass FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -Wnoncanonical-monoid-instances

library
  import: lang
  exposed-modules:
      Errors,
      Codes,
      Docs
  other-modules:
      TH.GenCodes,
      TH.GenDocs
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5,
      template-haskell >= 2.16,
      th-abstraction < 0.4,
      containers >= 0.6,
      plutus-core -any,
      plutus-tx -any,
      plutus-tx-plugin -any

executable plutus-errors-next
  import: lang
  main-is: Main.hs
  other-modules:
  hs-source-dirs: exe-next
  build-depends:
      base >=4.7 && <5,
      plutus-errors

executable plutus-errors-bootstrap
  import: lang
  main-is: Main.hs
  other-modules:
      TH.Bootstrap
  hs-source-dirs: exe-bootstrap
  build-depends:
      base >=4.7 && <5,
      template-haskell >= 2.16,
      th-abstraction < 0.4,
      containers >= 0.6,
      plutus-core,
      plutus-errors

test-suite plutus-errors-test
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      plutus-errors,
      tasty -any,
      tasty-hunit -any
